update for 32
