# src/models/order.model.ts
@@ -17,35 +17,70 @@ export class Order extends Entity {
    *
    */
   @property({
-
     id: true,
+    generated: 'false',
     type: 'string'
-
-
   })
-  orderID?: string;
+  order_id?: string;
 
   /**
    *
    */
   @property({
-
     type: 'string',
     maxLength: 256,
-
   })
-  userID?: string;
+  user_id?: string;
 
   /**
    *
    */
   @property({
-
     type: 'number',
+    format: 'float',
     minimum: 0,
-
+    maximum: 3.402823669209385e+38,
   })
   price?: number;
+
+  /**
+     *
+     */
+  @property({
+    type: 'number',
+    format: 'int32',
+    minimum: 0,
+    maximum: 2147483647,
+    generated: true
+  })
+  product_id?: number;
+
+  /**
+  *
+  */
+  @property({
+    type: 'number',
+    format: 'int32',
+    minimum: 0,
+    maximum: 2147483647,
+  })
+  number?: number;
+
+  /**
+  *
+  */
+  @property({
+    type: 'boolean',
+  })
+  completed?: boolean;
+
+  /**
+   *
+   */
+  @property({
+    type: 'string',
+  })
+  date?: string;
 
 }
 
